# GenshinCal

./: Artifact.cpp  Artifact.h  Basic_Elements.cpp  Basic_Elements.h  CMakeLists.txt  Character.cpp  Character.h  Config_File.cpp  Config_File.h  Deployment.cpp  Deployment.h  Reinforced_Artifact.cpp  Reinforced_Artifact.h  Weapon.cpp  Weapon.h  main 2.cpp  main.cpp
